--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
   <img src="memoji.png" 
        onerror="this.onerror=null;this.src='https://placehold.co/400x400/000000/FFFFFF?text=Amogh%27s+Memoji';" 
        alt="Amogh's Memoji" 
-       class="w-72 h-72 md:w-80 md:h-80 lg:w-96 lg:h-96 object-cover shadow-2xl shadow-red-500/30 transition-transform duration-500 hover:scale-105">
+       class="max-w-xs md:max-w-sm lg:max-w-md h-auto shadow-2xl shadow-red-500/30 transition-transform duration-500 hover:scale-105">
 </div>
             </div>
              <a href="#about" class="scroll-down">
