--- a/index.html
+++ b/index.html
@@ -305,11 +305,11 @@
                          alt="Amogh's Memoji" 
                          class="w-72 h-72 md:w-80 md:h-80 lg:w-96 lg:h-96 rounded-full object-cover shadow-2xl shadow-red-500/30 transition-transform duration-500 hover:scale-105">
                 </div> -->
-                <div class="md:w-2/5 flex justify-center mt-10 md:mt-0">
+                <div class="flex justify-center mt-10 md:mt-0">
   <img src="memoji.png" 
        onerror="this.onerror=null;this.src='https://placehold.co/400x400/000000/FFFFFF?text=Amogh%27s+Memoji';" 
        alt="Amogh's Memoji" 
-       class="max-w-xs md:max-w-sm lg:max-w-md h-auto shadow-2xl shadow-red-500/30 transition-transform duration-500 hover:scale-105">
+       class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl 2xl:max-w-2xl h-auto shadow-2xl shadow-red-500/30 transition-transform duration-500 hover:scale-105">
 </div>
             </div>
              <a href="#about" class="scroll-down">
