--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 <div class="flex flex-col md:flex-row items-center gap-16 mb-20">
                     <div class="md:w-1/3">
                         <div class="w-72 h-72 md:w-full md:h-auto mx-auto p-2 border-4 border-red-500/50 rounded-lg shadow-lg hover:border-red-500 transition-all duration-300">
-                           <img src="IMG_8785.heic" 
+                           <img src="IMG_8785.jpg" 
                                  onerror="this.onerror=null;this.src='https://placehold.co/400x400/000000/FFFFFF?text=Amogh';"
                                  alt="Amogh" 
                                  class="w-full h-full object-cover rounded-md">
