--- a/index.html
+++ b/index.html
@@ -296,7 +296,6 @@
                     </div>
                     <div class="flex justify-center md:justify-start space-x-4">
                         <a href="#projects" class="bg-red-500 hover:bg-red-600 text-white font-bold py-3 px-8 rounded-lg text-lg transition duration-300 transform hover:scale-105 inline-block">View My Work</a>
-                        <a href="#contact" class="bg-gray-700 hover:bg-gray-600 text-white font-bold py-3 px-8 rounded-lg text-lg transition duration-300 transform hover:scale-105 inline-block">Get In Touch</a>
                     </div>
                 </div>
                 <!-- <div class="md:w-2/5 flex justify-center mt-10 md:mt-0">
@@ -306,11 +305,19 @@
                          class="w-72 h-72 md:w-80 md:h-80 lg:w-96 lg:h-96 rounded-full object-cover shadow-2xl shadow-red-500/30 transition-transform duration-500 hover:scale-105">
                 </div> -->
                 <div class="flex justify-center mt-10 md:mt-0">
+  <img src="memoji.png"
+       onerror="this.onerror=null;this.src='https://placehold.co/400x400/222222/FFFFFF?text=Amogh%27s+Memoji';"
+       alt="Amogh's Memoji"
+       class="w-72 h-auto transition-transform duration-500 hover:scale-105"
+       style="filter: drop-shadow(0 0 10px rgba(255,0,0,0.3));">
+</div>
+                <!-- <div class="flex justify-center mt-10 md:mt-0">
   <img src="memoji.png" 
        onerror="this.onerror=null;this.src='https://placehold.co/400x400/000000/FFFFFF?text=Amogh%27s+Memoji';" 
        alt="Amogh's Memoji" 
        class="w-full max-w-xs sm:max-w-sm md:max-w-md lg:max-w-lg xl:max-w-xl 2xl:max-w-2xl h-auto shadow-2xl shadow-red-500/30 transition-transform duration-500 hover:scale-105">
-</div>
+</div> -->
+
             </div>
              <a href="#about" class="scroll-down">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-10 w-10" fill="none" viewBox="0 0 24 24" stroke="currentColor">
